# xastropy

./: .gitignore  .travis.yml  INSTALL  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
PH136/: __init__.py
docs/: xspec_doc.ipynb
docs/casbah/: CASBAH_galaxy_summary.ipynb
docs/examples/: AbsSurvey_examples.ipynb  AbslineSystem_examples.ipynb  CUBA_examples.ipynb  IonClms_examples.ipynb  LLSSurvey_examples.ipynb  LLSSystem_examples.ipynb  SDSS_Quasars.ipynb  XFitLLSGUI.ipynb  fit_examples.ipynb  xspec_doc.ipynb
obs/: x_finder.py  x_radec.py
xastropy/: __init__.py  setup_package.py
xastropy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xastropy/abs_sys/: __init__.py  abssys_utils.py  ionic_clm.py  lls_utils.py
xastropy/abund/: __init__.py  solar.py
xastropy/atomic/: __init__.py  elements.py  ionization.py
xastropy/casbah/: CASBAH_galaxy_database.ipynb  CASBAH_galaxy_usage.ipynb  __init__.py  build.py  build_casbah_galaxies.py  galaxies.py  galaxy_data.py  igm_spec.py  io.py  load_casbah.py  survey_figs.py  utils.py
xastropy/cgm/: README  __init__.py  core.py  cos_halos.py  field.py
xastropy/data/: __init__.py  x_data.py
xastropy/files/: __init__.py  general.py
xastropy/galaxy/: core.py
xastropy/igm/: EW_SPLINE_b24.p  __init__.py  cuba.py  igm_utils.py  setup_package.py  tau_eff.py
xastropy/kinematics/: __init__.py  absline.py
xastropy/lls/: __init__.py  lls_utils.py
xastropy/obs/: __init__.py  astroq_sdss_core.py  finder.py  keck.py  lick.py  radec.py  x_finder.py  x_getsdssimg.py  x_radec.py
xastropy/outils/: README  __init__.py  (+1 more)
(+119 files in other folders)
