[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = xastropy
description = Python codes for ProfX and Associates
long_description = This is a package for doing stuff that X likes
author = J. Xavier Prochaska
author_email = xavier@ucolick.org
license = BSD
url = https://github.com/xastropy/xastropy
edit_on_github = False
github_project = xastropy/xastropy
